[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/interfaz/KeyContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/interfaz/LlivesContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/interfaz/GoldContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/interfaz/BronzeContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/interfaz/SilverContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/interfaz/HUD.gd" type="Script" id=6]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.56573
margin_top = 10.2176
margin_right = 4.56567
margin_bottom = 10.2177
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 148.852, -74.6331 ],
"_edit_use_anchors_": false
}

[node name="KeyContainer" parent="." instance=ExtResource( 1 )]
margin_left = 8.75583
margin_top = 86.8517
margin_right = 158.756
margin_bottom = 148.852

[node name="LlivesContainer" parent="." instance=ExtResource( 2 )]
process_priority = 1
margin_left = 8.48528
margin_top = 15.8269
margin_right = 158.485
margin_bottom = 77.8269

[node name="GoldContainer" parent="." instance=ExtResource( 3 )]
margin_left = 1171.0
margin_top = 14.0
margin_right = 1271.0
margin_bottom = 40.0

[node name="BronzeContainer" parent="." instance=ExtResource( 4 )]
margin_left = 1172.0
margin_top = 93.0
margin_right = 1272.0
margin_bottom = 119.0

[node name="SilverContainer" parent="." instance=ExtResource( 5 )]
margin_left = 1171.61
margin_top = 50.5997
margin_right = 1271.61
margin_bottom = 76.5997
